@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2000, 2023, Oracle and/or its affiliates.
+  Copyright (c) 2000, 2024, Oracle and/or its affiliates.
 
   Licensed under the Universal Permissive License v 1.0 as shown at
   https://oss.oracle.com/licenses/upl.
@@ -68,10 +68,17 @@
 
   <properties>
     <!-- version prefix used for cluster compatibility -->
-    <project.version.prefix>14.1.1</project.version.prefix>
+    <project.version.prefix>15.0.0</project.version.prefix>
 
     <!-- The groupId of the Coherence product -->
     <coherence.group.id>com.oracle.coherence.ce</coherence.group.id>
+
+    <!--
+    Enable or disable the use of virtual threads in tests.
+    No actual value is set here so the default will be used in tests.
+    Set theis property on the command line to change it for a specific Maven build.
+    -->
+    <coherence.virtualthreads.enabled/>
 
     <!-- project information -->
     <project.build.number>0</project.build.number>
@@ -88,8 +95,11 @@
     <skip-sign-artifacts>true</skip-sign-artifacts>
     <skip-code-coverage>true</skip-code-coverage>
 
-    <surefire.argLine>-Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8</surefire.argLine>
-    <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8</failsafe.argLine>
+    <default.surefire.argLine>-Djava.net.preferIPv4Stack=true -Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8</default.surefire.argLine>
+    <surefire.argLine>${default.surefire.argLine}</surefire.argLine>
+    <failsafe.max.heap>1g</failsafe.max.heap>
+    <default.failsafe.argLine>-Djava.net.preferIPv4Stack=true -Xmx${failsafe.max.heap} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8</default.failsafe.argLine>
+    <failsafe.argLine>${default.failsafe.argLine}</failsafe.argLine>
     <surefire.coverage.argline/>
     <failsafe.coverage.argline/>
 
@@ -100,8 +110,9 @@
     <copyright.svn>-p4</copyright.svn>
 
     <!-- Coherence container/image properties -->
-    <docker.registry>docker.io/oraclecoherence</docker.registry>
-    <docker.image.name>${docker.registry}/coherence-ce:${project.version}</docker.image.name>
+    <docker.registry/>
+    <docker.image.suffix/>
+    <docker.image.name>${docker.registry}/coherence-ce:${project.version}${docker.image.suffix}</docker.image.name>
     <docker.image.arch>amd64</docker.image.arch>
     <!--
     The base image for the Coherence image - ideally a distroless OpenJDK image.
@@ -110,10 +121,15 @@
     Image names MUST include a registry prefix (for example even Docker Hub images need a docker.io/
     prefix. This is because the images are NOT built using Docker.
     -->
-    <docker.base.image.name.amd>gcr.io/distroless/java17-debian11:latest</docker.base.image.name.amd>
-    <docker.base.image.name.arm>gcr.io/distroless/java17-debian11:latest</docker.base.image.name.arm>
-    <graal.base.image.name.amd>ghcr.io/graalvm/graalvm-ce:${graal.image.tag}</graal.base.image.name.amd>
-    <graal.base.image.name.arm>ghcr.io/graalvm/graalvm-ce:${graal.image.tag}</graal.base.image.name.arm>
+    <docker.base.image.name.amd>gcr.io/distroless/java-base-debian12</docker.base.image.name.amd>
+    <docker.base.image.name.arm>gcr.io/distroless/java-base-debian12</docker.base.image.name.arm>
+    <docker.base.image.name.amd.17>gcr.io/distroless/java17-debian12</docker.base.image.name.amd.17>
+    <docker.base.image.name.arm.17>gcr.io/distroless/java17-debian12</docker.base.image.name.arm.17>
+    <graalvm.base.image.name.amd>container-registry.oracle.com/graalvm/jdk:${graalvm.image.tag}</graalvm.base.image.name.amd>
+    <graalvm.base.image.name.arm>container-registry.oracle.com/graalvm/jdk:${graalvm.image.tag}</graalvm.base.image.name.arm>
+    <graalvm.image.skip>false</graalvm.image.skip>
+    <!-- The prefix of the Java download URL (this URL does not have the arch specific part on the end, that is created by the build script) -->
+    <java.ea.base.url>https://download.oracle.com/java/21/latest/jdk-21</java.ea.base.url>
     <!-- default ports configured in the image -->
     <docker.port.grpc>1408</docker.port.grpc>
     <docker.port.extend>20000</docker.port.extend>
@@ -166,7 +182,7 @@
     <!-- ================================================================== -->
 
     <javadoc.copyright>
-      Copyright &amp;copy; 2000, 2023, Oracle and/or its affiliates.
+      Copyright &amp;copy; 2000, 2024, Oracle and/or its affiliates.
 
       Licensed under the Universal Permissive License v 1.0 as shown at
       http://oss.oracle.com/licenses/upl.
@@ -340,6 +356,7 @@
 
         <!-- internal/shaded modules -->
         <module>coherence-core</module>
+        <module>coherence-core-21</module>
         <module>coherence-core-components</module>
         <module>coherence-tracing</module>
 
@@ -379,20 +396,22 @@
         <module>coherence-json</module>
         <module>coherence-login</module>
         <module>coherence-management</module>
-        <module>coherence-metrics</module>
         <module>coherence-micrometer</module>
+        <module>coherence-protobuf</module>
         <module>coherence-http-netty</module>
         <module>coherence-rest</module>
         <module>coherence-cdi</module>
         <module>coherence-cdi-server</module>
         <module>coherence-mp</module>
         <module>coherence-grpc</module>
+        <module>coherence-grpc-proxy-common</module>
+        <module>coherence-grpc-proxy-helidon</module>
         <module>coherence-grpc-proxy</module>
+        <module>coherence-grpc-client-common</module>
+        <module>coherence-grpc-client-helidon</module>
         <module>coherence-java-client</module>
-        <module>coherence-helidon-grpc</module>
-        <module>coherence-helidon-grpc-proxy</module>
-        <module>coherence-helidon-client</module>
         <module>coherence-concurrent</module>
+        <module>coherence-hnsw</module>
         <module>plugins</module>
 
         <module>test/unit</module>
@@ -423,9 +442,9 @@
         <property>
           <!--
               Automatically enabled when inside IntelliJ.
-              IntelliJ sets the idea.version property when importing Maven projects.
+              IntelliJ sets the idea.maven.embedder.version property when importing Maven projects.
           -->
-          <name>idea.version</name>
+          <name>idea.maven.embedder.version</name>
         </property>
       </activation>
 
@@ -445,20 +464,22 @@
         <module>coherence-json</module>
         <module>coherence-login</module>
         <module>coherence-management</module>
-        <module>coherence-metrics</module>
         <module>coherence-micrometer</module>
+        <module>coherence-protobuf</module>
         <module>coherence-http-netty</module>
         <module>coherence-rest</module>
         <module>coherence-cdi</module>
         <module>coherence-cdi-server</module>
         <module>coherence-mp</module>
         <module>coherence-grpc</module>
+        <module>coherence-grpc-proxy-common</module>
+        <module>coherence-grpc-proxy-helidon</module>
         <module>coherence-grpc-proxy</module>
+        <module>coherence-grpc-client-common</module>
+        <module>coherence-grpc-client-helidon</module>
         <module>coherence-java-client</module>
-        <module>coherence-helidon-grpc</module>
-        <module>coherence-helidon-grpc-proxy</module>
-        <module>coherence-helidon-client</module>
         <module>coherence-concurrent</module>
+        <module>coherence-hnsw</module>
         <module>plugins</module>
 
         <module>examples</module>
@@ -692,24 +713,16 @@
 
         <!-- This is a work-around due to FailSafe putting JUnit jars on both the classpath and module path -->
         <default.failsafe.modules.argline>
-          --add-exports java.management/sun.management=com.oracle.coherence
-          --add-exports java.management/sun.management=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-          --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED,com.oracle.coherence
         </default.failsafe.modules.argline>
         <default.surefire.modules.argline>
-          --add-exports java.management/sun.management=com.oracle.coherence
-          --add-exports java.management/sun.management=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-          --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED,com.oracle.coherence
         </default.surefire.modules.argline>
         <failsafe.modules.argline>${default.failsafe.modules.argline}</failsafe.modules.argline>
         <surefire.modules.argline>${default.surefire.modules.argline}</surefire.modules.argline>
@@ -791,22 +804,16 @@
       <properties>
         <!-- This is a work-around due to FailSafe putting JUnit jars on both the classpath and module path -->
         <failsafe.modules.argline>
-          --add-exports java.management/sun.management=com.oracle.coherence
-          --add-exports java.management/sun.management=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED,com.oracle.coherence
         </failsafe.modules.argline>
         <surefire.modules.argline>
-          --add-exports java.management/sun.management=com.oracle.coherence
-          --add-exports java.management/sun.management=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
           --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-          --add-opens=java.base/java.lang.invoke=com.oracle.coherence
-          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED,com.oracle.coherence
         </surefire.modules.argline>
         <jacoco.agent.ut.arg/>
         <jacoco.agent.it.arg/>
@@ -845,6 +852,11 @@
                   <coherence.lambdas>static</coherence.lambdas>
                   <bedrock.profile.illegalaccess>deny</bedrock.profile.illegalaccess>
                   <bedrock.profile.illegalaccess.classname>com.oracle.coherence.testing.bedrock.IllegalaccessProfile</bedrock.profile.illegalaccess.classname>
+                  <bedrock.profile.loom/>
+                  <bedrock.profile.loom.classname>com.oracle.bedrock.runtime.coherence.profiles.LoomProfile</bedrock.profile.loom.classname>
+                  <bedrock.profile.targetdirectory/>
+                  <bedrock.profile.targetdirectory.classname>com.oracle.bedrock.runtime.coherence.profiles.TargetProfile</bedrock.profile.targetdirectory.classname>
+                  <coherence.virtualthreads.enabled>${coherence.virtualthreads.enabled}</coherence.virtualthreads.enabled>
                 </systemPropertyVariables>
                 <excludes>
                   <exclude>**/StreamTest.java</exclude>
@@ -868,6 +880,9 @@
                   <coherence.lambdas>static</coherence.lambdas>
                   <bedrock.profile.illegalaccess>deny</bedrock.profile.illegalaccess>
                   <bedrock.profile.illegalaccess.classname>com.oracle.coherence.testing.bedrock.IllegalaccessProfile</bedrock.profile.illegalaccess.classname>
+                  <bedrock.profile.loom/>
+                  <bedrock.profile.loom.classname>com.oracle.bedrock.runtime.coherence.profiles.LoomProfile</bedrock.profile.loom.classname>
+                  <coherence.virtualthreads.enabled>${coherence.virtualthreads.enabled}</coherence.virtualthreads.enabled>
                 </systemPropertyVariables>
                 <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
               </configuration>
@@ -952,8 +967,10 @@
     <profile>
       <id>test-production-mode</id>
       <properties>
-        <surefire.argLine>-Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dcoherence.mode=prod</surefire.argLine>
-        <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dcoherence.mode=prod</failsafe.argLine>
+        <default.surefire.argLine>-Xmx2g -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dcoherence.mode=prod</default.surefire.argLine>
+        <surefire.argLine>${default.surefire.argLine}</surefire.argLine>
+        <default.failsafe.argLine>-Xmx${failsafe.max.heap} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dcoherence.mode=prod</default.failsafe.argLine>
+        <failsafe.argLine>${default.failsafe.argLine}</failsafe.argLine>
       </properties>
       <build>
         <pluginManagement>
@@ -977,6 +994,43 @@
                 <systemPropertyVariables>
                   <bedrock.profile.productionmode>prod</bedrock.profile.productionmode>
                   <bedrock.profile.productionmode.classname>com.oracle.coherence.testing.bedrock.ProductionmodeProfile</bedrock.profile.productionmode.classname>
+                </systemPropertyVariables>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
+    <profile>
+      <id>test-catalog-resolve-strict</id>
+      <properties>
+        <!-- added properties *.resolve=strict to match jdk24 default -->
+        <surefire.argLine>-Djavax.xml.catalog.resolve=strict -Djdk.xml.jdkcatalog.resolve=strict ${default.surefire.argLine}</surefire.argLine>
+        <failsafe.argLine>-Djavax.xml.catalog.resolve=strict -Djdk.xml.jdkcatalog.resolve=strict ${default.failsafe.argLine}</failsafe.argLine>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>${maven.surefire.plugin.version}</version>
+              <configuration>
+                <systemPropertyVariables>
+                  <bedrock.profile.illegalaccess>strict</bedrock.profile.illegalaccess>
+                  <bedrock.profile.illegalaccess.classname>com.oracle.coherence.testing.bedrock.IllegalaccessProfile</bedrock.profile.illegalaccess.classname>
+                </systemPropertyVariables>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>${maven.failsafe.plugin.version}</version>
+              <configuration>
+                <systemPropertyVariables>
+                  <bedrock.profile.illegalaccess>strict</bedrock.profile.illegalaccess>
+                  <bedrock.profile.illegalaccess.classname>com.oracle.coherence.testing.bedrock.IllegalaccessProfile</bedrock.profile.illegalaccess.classname>
                 </systemPropertyVariables>
               </configuration>
             </plugin>
@@ -1012,6 +1066,47 @@
       </activation>
       <properties>
         <copyright.exclude.files>${top.parent.basedir}\etc\copyright-exclude-windows.txt</copyright.exclude.files>
+      </properties>
+    </profile>
+
+    <!--
+    Helidon 3 Profile
+    This will switch the Helidon dependency to Helidon 3.
+    This profile is automatically active when Java < 21 is used.
+    -->
+    <profile>
+      <id>helidon3</id>
+      <activation>
+        <jdk>(,20]</jdk>
+      </activation>
+      <properties>
+        <helidon.version>${helidon.version.3}</helidon.version>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>image-registry-set</id>
+      <activation>
+        <property>
+          <name>env.IMAGE_REGISTRY_NAME</name>
+        </property>
+      </activation>
+      <properties>
+        <docker.registry>${env.IMAGE_REGISTRY_NAME}</docker.registry>
+        <docker.image.name>${docker.registry}/coherence-ce:${project.version}${docker.image.suffix}</docker.image.name>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>image-registry-not-set</id>
+      <activation>
+        <property>
+          <name>!env.IMAGE_REGISTRY_NAME</name>
+        </property>
+      </activation>
+      <properties>
+        <docker.registry/>
+        <docker.image.name>coherence-ce:${project.version}${docker.image.suffix}</docker.image.name>
       </properties>
     </profile>
   </profiles>
