@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-  Copyright (c) 2000, 2023, Oracle and/or its affiliates.
+  Copyright (c) 2000, 2024, Oracle and/or its affiliates.
 
   Licensed under the Universal Permissive License v 1.0 as shown at
   https://oss.oracle.com/licenses/upl.
@@ -33,6 +33,9 @@
       --add-opens java.base/java.lang=ALL-UNNAMED
       --add-opens io.helidon.microprofile.server/io.helidon.microprofile.server=weld.core.impl
       --add-opens io.helidon.microprofile.server/io.helidon.microprofile.server=io.helidon.microprofile.cdi
+      --add-reads com.oracle.coherence.cdi=weld.api
+      --add-reads com.oracle.coherence.cdi=weld.core.impl
+      --add-reads com.oracle.coherence.cdi.server=weld.core.impl
     </failsafe.modules.argline>
   </properties>
 
